<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_hindi"
        android:title="@string/home_hindi"
        android:icon="@drawable/home" />

    <item
        android:id="@+id/government_schemes_hindi"
        android:title="@string/government_schemes_hindi"
        android:icon="@drawable/schemes_gov" />

    <item android:id="@+id/volunteer_organization_schemes_hindi"
        android:title="@string/volunteer_organization_schemes_hindi"
        android:icon="@drawable/schemes"/>

    <item android:id="@+id/exhibition_hindi"
        android:title="@string/exhibition_hindi"
        android:icon="@drawable/exhibition"/>

    <item android:id="@+id/seminar_hindi"
        android:title="@string/seminar_hindi"
        android:icon="@drawable/seminar"/>

    <item android:id="@+id/new_invention_hindi"
        android:title="@string/new_invention_hindi"
        android:icon="@drawable/invent"/>

    <item android:id="@+id/weather_hindi"
        android:title="@string/weather_hindi"
        android:icon="@drawable/weather"/>

    <item android:id="@+id/current_affairs_hindi"
        android:title="@string/current_affairs_hindi"
        android:icon="@drawable/seminar"/>


    <item android:id="@+id/smart_tips_hindi"
        android:title="@string/smart_tips_hindi"
        android:icon="@drawable/smart"/>

    <item android:id="@+id/expert_suggestions_hindi"
        android:title="@string/expert_suggestions_hindi"
        android:icon="@drawable/expert"/>


    <item android:id="@+id/about_kisan_yojna_hindi"
        android:title="@string/about_kisan_yojna_hindi"
        android:icon="@drawable/about"/>

    <item android:id="@+id/contact_us_hindi"
        android:title="@string/contact_us_hindi"
        android:icon="@drawable/contact"/>

    <item android:id="@+id/share_application_hindi"
        android:title="@string/share_application_hindi"
        android:icon="@drawable/share"/>

    <item android:id="@+id/ratings_hindi"
        android:title="@string/ratings_hindi"
        android:icon="@drawable/rating"/>

    <item android:id="@+id/privacy_policy_hindi"
        android:title="@string/privacy_policy_hindi"
        android:icon="@drawable/privacy"/>


    <item android:id="@+id/terms_of_service_hindi"
        android:title="@string/terms_of_service_hindi"
        android:icon="@drawable/seminar"/>


</menu>