<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_gujarati"
        android:title="@string/home_gujarati"
        android:icon="@drawable/home" />

    <item
        android:id="@+id/government_schemes_gujarati"
        android:title="@string/government_schemes_gujarati"
        android:icon="@drawable/schemes_gov" />

    <item android:id="@+id/volunteer_organization_schemes_gujarati"
        android:title="@string/volunteer_organization_schemes_gujarati"
        android:icon="@drawable/schemes"/>

    <item android:id="@+id/exhibition_gujarati"
        android:title="@string/exhibition_gujarati"
        android:icon="@drawable/exhibition"/>

    <item android:id="@+id/seminar_gujarati"
        android:title="@string/seminar_gujarati"
        android:icon="@drawable/seminar"/>

    <item android:id="@+id/new_invention_gujarati"
        android:title="@string/new_invention_gujarati"
        android:icon="@drawable/invent"/>

    <item android:id="@+id/weather_gujarati"
        android:title="@string/weather_gujarati"
        android:icon="@drawable/weather"/>

    <item android:id="@+id/current_affairs_gujarati"
        android:title="@string/current_affairs_gujarati"
        android:icon="@drawable/seminar"/>


    <item android:id="@+id/smart_tips_gujarati"
        android:title="@string/smart_tips_gujarati"
        android:icon="@drawable/smart"/>

    <item android:id="@+id/expert_suggestions_gujarati"
        android:title="@string/expert_suggestions_gujarati"
        android:icon="@drawable/expert"/>


    <item android:id="@+id/about_kisan_yojna_gujarati"
        android:title="@string/about_kisan_yojna_gujarati"
        android:icon="@drawable/about"/>

    <item android:id="@+id/contact_us_gujarati"
        android:title="@string/contact_us_gujarati"
        android:icon="@drawable/contact"/>

    <item android:id="@+id/share_application_gujarati"
        android:title="@string/share_application_gujarati"
        android:icon="@drawable/share"/>

    <item android:id="@+id/ratings_gujarati"
        android:title="@string/ratings_gujarati"
        android:icon="@drawable/rating"/>

    <item android:id="@+id/privacy_policy_gujarati"
        android:title="@string/privacy_policy_gujarati"
        android:icon="@drawable/privacy"/>


    <item android:id="@+id/terms_of_service_gujarati"
        android:title="@string/terms_of_service_gujarati"
        android:icon="@drawable/seminar"/>


</menu>