<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item
            android:id="@+id/home_marathi"
            android:title="@string/home_marathi"
            android:titleCondensed="Home"
            android:icon="@drawable/home" />

        <item
            android:id="@+id/government_schemes_marathi"
            android:title="@string/government_schemes_marathi"
            android:titleCondensed="government_schemes"
            android:icon="@drawable/schemes_gov" />

        <item android:id="@+id/volunteer_organization_schemes_marathi"
            android:title="@string/volunteer_organization_schemes_marathi"
            android:titleCondensed="volunteer_organization_schemes"
            android:icon="@drawable/schemes"/>

        <item android:id="@+id/exhibition_marathi"
            android:title="@string/exhibition_marathi"
            android:titleCondensed="exhibition"
            android:icon="@drawable/exhibition"/>

        <item android:id="@+id/seminar_marathi"
            android:title="@string/seminar_marathi"
            android:titleCondensed="seminar"
            android:icon="@drawable/seminar"/>

        <item android:id="@+id/new_invention_marathi"
            android:title="@string/new_invention_marathi"
            android:titleCondensed="new_invention"
            android:icon="@drawable/invent"/>

        <item android:id="@+id/weather_marathi"
            android:title="@string/weather_marathi"
            android:titleCondensed="weather"
            android:icon="@drawable/weather"/>

        <item android:id="@+id/current_affairs_marathi"
            android:title="@string/current_affairs_marathi"
            android:titleCondensed="current_affairs"
            android:icon="@drawable/seminar"/>


        <item android:id="@+id/smart_tips_marathi"
            android:title="@string/smart_tips_marathi"
            android:titleCondensed="smart_tips"
            android:icon="@drawable/smart"/>

        <item android:id="@+id/expert_suggestions_marathi"
            android:title="@string/expert_suggestions_marathi"
            android:titleCondensed="expert_suggestions"
            android:icon="@drawable/expert"/>


        <item android:id="@+id/about_kisan_yojna_marathi"
            android:title="@string/about_kisan_yojna_marathi"
            android:icon="@drawable/about"/>

        <item android:id="@+id/contact_us_marathi"
            android:title="@string/contact_us_marathi"
            android:icon="@drawable/contact"/>

        <item android:id="@+id/share_application_marathi"
            android:title="@string/share_application_marathi"
            android:icon="@drawable/share"/>

        <item android:id="@+id/ratings_marathi"
            android:title="@string/ratings_marathi"
            android:icon="@drawable/rating"/>

        <item android:id="@+id/privacy_policy_marathi"
            android:title="@string/privacy_policy_marathi"
            android:icon="@drawable/privacy"/>


        <item android:id="@+id/terms_of_service_marathi"
            android:title="@string/terms_of_service_marathi"
            android:icon="@drawable/seminar"/>


</menu>