<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SelectStateActivity"
    android:background="#00E676">


    <LinearLayout
        android:orientation="vertical"
        android:padding="5dip"
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/kisan"/>

        <!-- Text Label -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:text="@string/select_state"
            android:textColor="@color/White"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:background="@drawable/border"/>

        <!-- Spinner Element -->
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/spinner_title"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:text="@string/proceed"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/White"
        android:id="@+id/button"
        android:background="@color/primary_transparent"
        android:layout_marginBottom="18dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>